--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -19,6 +19,13 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://repository-achartengine.forge.cloudbees.com/snapshot/"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
@@ -26,6 +33,9 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.google.guava:guava:18.0'
+
+    // chart lib
+    compile "org.achartengine:achartengine:1.2.0"
 
     // Test only dependencies
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
