--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-  package="com.huangsz.recorder"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.huangsz.recorder" >
 
-  <!-- To access Google+ APIs: -->
-  <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
-  <application
-    android:allowBackup="true"
-    android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme">
-    <activity
-      android:name=".RecorderActivity"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".RecorderActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-    <activity
-      android:name=".EditRecordActivity"
-      android:label="@string/app_name"
-      android:parentActivityName=".RecorderActivity">
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".EditRecordActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".RecorderActivity" >
+        </activity>
 
-    <provider
-      android:name=".data.RecordProvider"
-      android:authorities="com.huangsz.recorder"
-      android:exported="false"/>
-  </application>
+        <provider
+            android:name=".data.RecordProvider"
+            android:authorities="com.huangsz.recorder"
+            android:exported="false" />
+
+        <activity
+            android:name=".RecordDetailActivity"
+            android:label="@string/title_activity_record_detail"
+            android:parentActivityName=".RecorderActivity" >
+        </activity>
+    </application>
 
 </manifest>
